[gd_scene load_steps=7 format=3 uid="uid://b7osmbfn8mx0n"]

[ext_resource type="Theme" uid="uid://dghnjlpplxvrd" path="res://main_theme.tres" id="1_b57te"]
[ext_resource type="Script" uid="uid://sh8ncgt13ge8" path="res://scenes/main.gd" id="2_quo3o"]
[ext_resource type="PackedScene" uid="uid://w0bouaxdh8jp" path="res://scenes/preview.tscn" id="3_fby4a"]

[sub_resource type="Gradient" id="Gradient_t6o2t"]
colors = PackedColorArray(1, 0.541176, 0.380392, 1, 1, 0.792157, 0.380392, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_b81jl"]
gradient = SubResource("Gradient_t6o2t")
fill_to = Vector2(0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g6hi7"]
bg_color = Color(1, 1, 1, 1)

[node name="VBoxContainer" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_b57te")
theme_override_constants/separation = 0

[node name="Main" type="TextureRect" parent="."]
layout_mode = 2
size_flags_vertical = 3
texture = SubResource("GradientTexture2D_b81jl")
script = ExtResource("2_quo3o")

[node name="MarginContainer" type="MarginContainer" parent="Main"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="HBoxContainer" type="HBoxContainer" parent="Main/MarginContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="Main/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(450, 0)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="Main/MarginContainer/HBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 60
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 60
theme_override_constants/margin_bottom = 60

[node name="VBoxContainer" type="VBoxContainer" parent="Main/MarginContainer/HBoxContainer/PanelContainer/MarginContainer"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2

[node name="Label" type="Label" parent="Main/MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderSmall"
text = "Sprite Mesh"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Main/MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Label" type="Label" parent="Main/MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Example"

[node name="OptionButton" type="OptionButton" parent="Main/MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
item_count = 3
popup/item_0/text = "Food"
popup/item_0/id = -1
popup/item_0/separator = true
popup/item_1/text = "Weapons"
popup/item_1/id = -1
popup/item_1/separator = true
popup/item_2/text = "Characters"
popup/item_2/id = -1
popup/item_2/separator = true

[node name="HBoxContainer" type="HBoxContainer" parent="Main/MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="CheckButton" type="CheckButton" parent="Main/MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
button_pressed = true

[node name="Label" type="Label" parent="Main/MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Show Sprite Mesh"

[node name="VBoxContainer2" type="VBoxContainer" parent="Main/MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="HBoxContainer" type="HBoxContainer" parent="Main/MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="Main/MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Rotation"

[node name="Button" type="Button" parent="Main/MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer2/HBoxContainer"]
layout_mode = 2
theme_type_variation = &"GhostButton"
text = "Reset"

[node name="HBoxContainer2" type="HBoxContainer" parent="Main/MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Label" type="Label" parent="Main/MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer2/HBoxContainer2"]
layout_mode = 2
text = "X"

[node name="HSlider" type="HSlider" parent="Main/MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer2/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = 0.01
max_value = 1.0
step = 0.01
value = 0.5

[node name="HBoxContainer3" type="HBoxContainer" parent="Main/MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Label" type="Label" parent="Main/MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer2/HBoxContainer3"]
layout_mode = 2
text = "Y"

[node name="HSlider" type="HSlider" parent="Main/MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer2/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = 0.01
max_value = 1.0
step = 0.01
value = 0.5

[node name="HBoxContainer4" type="HBoxContainer" parent="Main/MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Label" type="Label" parent="Main/MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer2/HBoxContainer4"]
layout_mode = 2
text = "Z"

[node name="HSlider" type="HSlider" parent="Main/MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer2/HBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = 0.01
max_value = 1.0
step = 0.01
value = 0.5

[node name="VBoxContainer3" type="VBoxContainer" parent="Main/MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Label" type="Label" parent="Main/MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer3"]
layout_mode = 2
text = "Zoom"

[node name="HSlider" type="HSlider" parent="Main/MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 1.0
step = 0.01
value = 0.5

[node name="VBoxContainer4" type="VBoxContainer" parent="Main/MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="Label" type="Label" parent="Main/MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer4"]
layout_mode = 2
text = "Changed Properties"

[node name="TextEdit" type="TextEdit" parent="Main/MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer4"]
layout_mode = 2
size_flags_vertical = 3
editable = false

[node name="Preview" parent="Main/MarginContainer/HBoxContainer" instance=ExtResource("3_fby4a")]
layout_mode = 2
preview_name = "Sprite Mesh"

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_g6hi7")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 0
alignment = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Sprites from "

[node name="LinkButton" type="LinkButton" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Ninja Adventure"
uri = "https://pixel-boy.itch.io/ninja-adventure-asset-pack"

[node name="Label2" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
text = ", made by "

[node name="LinkButton2" type="LinkButton" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Pixel-Boy"
uri = "https://twitter.com/2Pblog1"

[node name="Label3" type="Label" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
text = " and "

[node name="LinkButton3" type="LinkButton" parent="PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "AAA"
uri = "https://www.instagram.com/challenger.aaa/?hl=fr"

[connection signal="item_selected" from="Main/MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer/OptionButton" to="Main" method="update_item"]
[connection signal="pressed" from="Main/MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/CheckButton" to="Main" method="update_item"]
[connection signal="pressed" from="Main/MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer2/HBoxContainer/Button" to="Main" method="reset_rotation"]
[connection signal="value_changed" from="Main/MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer2/HBoxContainer2/HSlider" to="Main" method="update_x_rotation"]
[connection signal="value_changed" from="Main/MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer2/HBoxContainer3/HSlider" to="Main" method="update_y_rotation"]
[connection signal="value_changed" from="Main/MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer2/HBoxContainer4/HSlider" to="Main" method="update_z_rotation"]
[connection signal="value_changed" from="Main/MarginContainer/HBoxContainer/PanelContainer/MarginContainer/VBoxContainer/VBoxContainer3/HSlider" to="Main" method="update_zoom"]
[connection signal="camera_zoom_changed" from="Main/MarginContainer/HBoxContainer/Preview" to="Main" method="zoom_updated"]
[connection signal="item_rotation_changed" from="Main/MarginContainer/HBoxContainer/Preview" to="Main" method="rotation_updated"]
